# kreuzberg-ml

./: .gitignore  README.md  setup.cfg  tox.ini
.github/workflows/: test.yml
src/: demo.ipynb
src/kreuzbergml/config/: logging.py  utils.py
src/kreuzbergml/data/: postgres.py
src/kreuzbergml/data/notebooks/: Datasources.ipynb
src/kreuzbergml/data_quality/: DataFrameStatistics.py  data_frame_statistics.py  data_quality.py  test_data_quality.py
src/kreuzbergml/deployment/azure/: app.py  database.py
src/kreuzbergml/model/: param_factory.py
src/tests/: debug_data_quality.py  demo.py  test_data_quality.py
src/tests/sample_data/: Electric_Production_timeseries.csv  census_1000.csv  melb_1000.csv
