[metadata]
name = kreuzbergml
version = 0.1.2
description = Toolbox for faster ML prototypes construction and demonstration.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/LEAD-Machine-Learning/kreuzberg-ml
download_url = https://github.com/LEAD-Machine-Learning/kreuzberg-ml/releases
project_urls =
    Bug Tracker = https://github.com/LEAD-Machine-Learning/kreuzberg-ml/issues
    Source Code = https://github.com/LEAD-Machine-Learning/kreuzberg-ml

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # Keep adding your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)

keywords =
    leadml
    framework
    toolbox
    ml
    # Keep adding your own free-text keywords

[options]
install_requires =
    pandas
    numpy
    gin-config
    scikit-learn
    sqlalchemy
    psycopg2-binary

zip_safe = False
include_package_data = True
python_requires = >=3.8

packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
github =
    tox
    tox-gh-actions
dev =
    tox
    isort
    black
    mypy
    flake8
    pytest
    # If the dev dependencies are changed, you might also want to update tox.ini respectively
pypi =
    wheel
    twine
azure =
    azureml-core>=1.49.0
    azureml-mlflow>=1.49.0
    azureml-train-core>=1.49.0
    azureml-train-automl-client>=1.49.0
    azureml-telemetry>=1.49.0
    azureml-pipeline>=1.49.0
    azureml-pipeline-core>=1.49.0
    azureml-pipeline-steps>=1.49.0

[mypy]
ignore_missing_imports = True

[flake8]
ignore = E501

[isort]
profile = black

[tool:pytest]
testpaths = src/tests/

[gh-actions]
python =
    3.8: py38
